# ingest-youtube-content

./: .cursorignore  .env.example  .env.template  CLAUDE.md  Dockerfile  MIGRATION_GUIDE.md  README.md  alembic.ini  main.py  pyproject.toml
.cursor/rules/: dependency-management.mdc  developer-log.mdc  general-guidelines.mdc  kafka-best-practices.mdc  migrations-and-models.mdc  readme-maintenance.mdc
docs/: ABSTRACT.md  SPECIFICATION.md  developer-log.md  message-spec.md
docs/apify/: youtube-scraper-actor.md  youtube-transcript-scraper-actor.md
migrations/: 000-create-tables.sql  env.py
migrations/versions/: 20241220_initial_schema.py  20250602_1007_add_resource_pool_field.py
src/clustera_youtube_ingest/: __init__.py  apify_client.py  cli.py  database.py  kafka_publisher.py  list_ingestion.py  migration_manager.py  models.py  processors.py  sdk.py  source_manager.py  sync_orchestrator.py  transcript_ingestion.py  url_utils.py
