[project]
name = "clustera-template-kernel"
version = "0.1.0"
description = "Template for Clustera Kernels - single-responsibility Kafka consumers/producers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core Kafka functionality
    "kafka-python",
    
    # Database access (optional - remove if not needed)
    "psycopg2-binary",
    
    # Environment variable management
    "python-dotenv",
    
    # Add your kernel-specific dependencies here
    # Examples:
    # "requests",          # For HTTP requests
    # "redis",             # For Redis cache
    # "sqlalchemy",        # For ORM
    # "pydantic",          # For data validation
    # "httpx",             # For async HTTP
    # "aioredis",          # For async Redis
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]